lyricue3 (1:3.0.20-1) maverick; urgency=low

  * Lyricue should quote passwords in mysql command (LP#668770)
  * Playback control not working (LP#668443)

 -- Chris Debenham <chris@adebenham.com>  Sun, 7 Nov 2010 17:30:00 +1000

lyricue3 (1:3.0.19-1) maverick; urgency=low

  * Work on blank screen behaviour (LP#662311)

 -- Chris Debenham <chris@adebenham.com>  Fri, 29 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.18-1) maverick; urgency=high

  * Make 'OK' be default action in combo/entry dialogs (LP#665494)
  * Add fade/blur effect for backgrounds
  * Work on getting aspect ratio displayed right for backgrounds

 -- Chris Debenham <chris@adebenham.com>  Thu, 28 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.17-1) maverick; urgency=high

  * Fix Crash when playing videos

 -- Chris Debenham <chris@adebenham.com>  Sun, 24 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.16-1) maverick; urgency=medium

  * Fix missing break in mouse-click handling (LP#664931)
  * Fix lyricue_display distorts images (LP#664921)

 -- Chris Debenham <chris@adebenham.com>  Sat, 23 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.15-1) maverick; urgency=medium

  * Fix lyricue_display ignores font colour setting on songs (LP#664929)
  * Add mouse-click handling (LP#664931)
  * Fix line-wrap for preview (LP#662893)

 -- Chris Debenham <chris@adebenham.com>  Fri, 22 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.14-1) maverick; urgency=medium

  * Fix preview window display

 -- Chris Debenham <chris@adebenham.com>  Fri, 15 Oct 2010 22:30:00 +1000

lyricue3 (1:3.0.13-1) maverick; urgency=medium

  * Remove multiple Load/Close Lyricue Display items in menu

 -- Chris Debenham <chris@adebenham.com>  Fri, 15 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.12-1) maverick; urgency=medium

  * Remove ServerType setting as it is no longer used
  * Fix preview in add/edit song dialog

 -- Chris Debenham <chris@adebenham.com>  Mon, 11 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.11.1-1) maverick; urgency=low
