@@ -2,6 +2,8 @@ lyricue3 (1:3.0.20-1) maverick; urgency=low
 
   * Lyricue should quote passwords in mysql command (LP#668770)
   * Playback control not working (LP#668443)
+  * Fix handling of & in text display
+  * Lyricue 3 miniview does not work  (LP#640936)
 
  -- Chris Debenham <chris@adebenham.com>  Sun, 7 Nov 2010 17:30:00 +1000
 
